# lang

./: .gitignore  .replit  Cargo.toml  README.md  cc_line.lang  docs.md  fizzbuzz.lang  fizzbuzz.phx  line.lang  line.phx  loop.lang  shortcut.sh  simple.lang  test.egg  test.regg  todo.md
src/: evaluate.rs  expr.rs  main.rs  parser.rs  specialforms.rs
src/lang/: define.js  define.md  dict.rs  errorhandler.rs  evaluate.rs  expr.rs  lexer.rs  mod.rs  old_lexer.rs  parser.rs  preprocesser.rs  scope.rs  specialforms.rs  tokenizer.rs
tests/: empty.rs
