[package]
name = "phoenix"
version = "0.0.1"
authors = ["achester88<anthonychester71@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
regex = "1"